--- a/Draw/ZhaJinHua/View/ZJHAvatarView~ipad.xib
+++ b/Draw/ZhaJinHua/View/ZJHAvatarView~ipad.xib
@@ -41,7 +41,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{114, 148}</string>
 						<reference key="NSSuperview" ref="849152490"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="545417252"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -56,7 +55,6 @@
 						<int key="NSvFlags">-2147483329</int>
 						<string key="NSFrame">{{8.5, 48}, {90, 90}}</string>
 						<reference key="NSSuperview" ref="849152490"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="410965933">
 							<int key="NSColorSpace">3</int>
@@ -69,7 +67,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{2, 0}, {110, 42}}</string>
 						<reference key="NSSuperview" ref="849152490"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="12092810"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -78,7 +75,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<string key="IBUIText">玉树临风</string>
-						<object class="NSColor" key="IBUITextColor" id="1055598559">
+						<object class="NSColor" key="IBUITextColor" id="847064458">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -96,16 +93,15 @@
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUIView" id="488017102">
+					<object class="IBUIView" id="755707502">
 						<reference key="NSNextResponder" ref="849152490"/>
 						<int key="NSvFlags">-2147483329</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="234028170">
-								<reference key="NSNextResponder" ref="488017102"/>
+							<object class="IBUILabel" id="42053750">
+								<reference key="NSNextResponder" ref="755707502"/>
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{34, 0}, {74, 34}}</string>
-								<reference key="NSSuperview" ref="488017102"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="755707502"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -113,7 +109,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<string key="IBUIText">+9999</string>
-								<reference key="IBUITextColor" ref="1055598559"/>
+								<reference key="IBUITextColor" ref="847064458"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
@@ -127,13 +123,12 @@
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUIImageView" id="377404838">
-								<reference key="NSNextResponder" ref="488017102"/>
+							<object class="IBUIImageView" id="1019837785">
+								<reference key="NSNextResponder" ref="755707502"/>
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{34, 34}</string>
-								<reference key="NSSuperview" ref="488017102"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="234028170"/>
+								<reference key="NSSuperview" ref="755707502"/>
+								<reference key="NSNextKeyView" ref="42053750"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -141,8 +136,7 @@
 						</array>
 						<string key="NSFrame">{{3, 57}, {108, 34}}</string>
 						<reference key="NSSuperview" ref="849152490"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="377404838"/>
+						<reference key="NSNextKeyView" ref="1019837785"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="410965933"/>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -150,7 +144,6 @@
 				</array>
 				<string key="NSFrameSize">{114, 148}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="956099024"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="410965933"/>
@@ -191,7 +184,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">rewardCoinView</string>
 						<reference key="source" ref="849152490"/>
-						<reference key="destination" ref="488017102"/>
+						<reference key="destination" ref="755707502"/>
 					</object>
 					<int key="connectionID">25</int>
 				</object>
@@ -199,7 +192,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">rewardCoinLabel</string>
 						<reference key="source" ref="849152490"/>
-						<reference key="destination" ref="234028170"/>
+						<reference key="destination" ref="42053750"/>
 					</object>
 					<int key="connectionID">26</int>
 				</object>
@@ -207,7 +200,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">coinImageView</string>
 						<reference key="source" ref="849152490"/>
-						<reference key="destination" ref="377404838"/>
+						<reference key="destination" ref="1019837785"/>
 					</object>
 					<int key="connectionID">27</int>
 				</object>
@@ -238,7 +231,7 @@
 							<reference ref="12092810"/>
 							<reference ref="956099024"/>
 							<reference ref="545417252"/>
-							<reference ref="488017102"/>
+							<reference ref="755707502"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -260,22 +253,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
-						<reference key="object" ref="488017102"/>
+						<reference key="object" ref="755707502"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="234028170"/>
-							<reference ref="377404838"/>
+							<reference ref="42053750"/>
+							<reference ref="1019837785"/>
 						</array>
 						<reference key="parent" ref="849152490"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
-						<reference key="object" ref="234028170"/>
-						<reference key="parent" ref="488017102"/>
+						<reference key="object" ref="42053750"/>
+						<reference key="parent" ref="755707502"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">23</int>
-						<reference key="object" ref="377404838"/>
-						<reference key="parent" ref="488017102"/>
+						<reference key="object" ref="1019837785"/>
+						<reference key="parent" ref="755707502"/>
 					</object>
 				</array>
 			</object>
@@ -299,60 +292,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">27</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">FXLabel</string>
-					<string key="superclassName">UILabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FXLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ZJHAvatarView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backgroundImageView">UIImageView</string>
-						<string key="coinImageView">UIImageView</string>
-						<string key="nickNameLabel">UILabel</string>
-						<string key="rewardCoinLabel">UILabel</string>
-						<string key="rewardCoinView">UIView</string>
-						<string key="roundAvatarPlaceView">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backgroundImageView">
-							<string key="name">backgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinImageView">
-							<string key="name">coinImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nickNameLabel">
-							<string key="name">nickNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rewardCoinLabel">
-							<string key="name">rewardCoinLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rewardCoinView">
-							<string key="name">rewardCoinView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="roundAvatarPlaceView">
-							<string key="name">roundAvatarPlaceView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ZJHAvatarView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
