--- a/Draw/ZhaJinHua/View/ZJHMyAvatarView~ipad.xib
+++ b/Draw/ZhaJinHua/View/ZJHMyAvatarView~ipad.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">12A269</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1187</string>
-		<string key="IBDocument.HIToolboxVersion">624.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1926</string>
@@ -41,6 +41,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{222, 114}</string>
 						<reference key="NSSuperview" ref="772205281"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="389415577"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -55,6 +56,7 @@
 						<int key="NSvFlags">-2147483329</int>
 						<string key="NSFrame">{{9, 14}, {94, 94}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="475606837"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="957088809">
@@ -68,6 +70,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{112, 0}, {105, 32}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="983823943"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="957088809"/>
@@ -83,14 +86,12 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="959017291">
-							<string key="name">Avenir-Medium</string>
-							<string key="family">Avenir</string>
-							<int key="traits">0</int>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">2</int>
 							<double key="pointSize">16</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="960467822">
-							<string key="NSName">Avenir-Medium</string>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
 						</object>
@@ -101,6 +102,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{112, 38}, {100, 22}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="534568071"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="957088809"/>
@@ -116,8 +118,15 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<reference key="IBUIFontDescription" ref="959017291"/>
-						<reference key="IBUIFont" ref="960467822"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="221333436">
+							<int key="type">1</int>
+							<double key="pointSize">16</double>
+						</object>
+						<object class="NSFont" key="IBUIFont" id="208723344">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">16</double>
+							<int key="NSfFlags">16</int>
+						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUIImageView" id="534568071">
@@ -125,6 +134,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{108, 74}, {24, 24}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="662170440"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -139,6 +149,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{133, 68}, {84, 36}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="957088809"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -153,9 +164,9 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<float key="IBUIMinimumScaleFactor">0.80000001192092896</float>
-						<reference key="IBUIFontDescription" ref="959017291"/>
-						<reference key="IBUIFont" ref="960467822"/>
+						<float key="IBUIMinimumScaleFactor">0.89999997615814209</float>
+						<reference key="IBUIFontDescription" ref="221333436"/>
+						<reference key="IBUIFont" ref="208723344"/>
 					</object>
 					<object class="IBUIView" id="89260877">
 						<reference key="NSNextResponder" ref="772205281"/>
@@ -166,6 +177,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{34, 0}, {74, 34}}</string>
 								<reference key="NSSuperview" ref="89260877"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -195,6 +207,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{34, 34}</string>
 								<reference key="NSSuperview" ref="89260877"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="146375440"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -203,6 +216,7 @@
 						</array>
 						<string key="NSFrame">{{57, 40}, {108, 34}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1066316025"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="957088809"/>
@@ -211,6 +225,7 @@
 				</array>
 				<string key="NSFrameSize">{222, 114}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="620880868"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="957088809"/>
@@ -396,7 +411,90 @@
 			<nil key="sourceID"/>
 			<int key="maxID">54</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">DiceAvatarView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DiceAvatarView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FXLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FXLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ZJHAvatarView</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="coinImageView">UIImageView</string>
+						<string key="nickNameLabel">UILabel</string>
+						<string key="rewardCoinLabel">UILabel</string>
+						<string key="rewardCoinView">UIView</string>
+						<string key="roundAvatarPlaceView">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="coinImageView">
+							<string key="name">coinImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nickNameLabel">
+							<string key="name">nickNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="rewardCoinLabel">
+							<string key="name">rewardCoinLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="rewardCoinView">
+							<string key="name">rewardCoinView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="roundAvatarPlaceView">
+							<string key="name">roundAvatarPlaceView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ZJHAvatarView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ZJHMyAvatarView</string>
+					<string key="superclassName">ZJHAvatarView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="coinsLabel">UILabel</string>
+						<string key="levelLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="coinsLabel">
+							<string key="name">coinsLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="levelLabel">
+							<string key="name">levelLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ZJHMyAvatarView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
