--- a/Draw/ZhaJinHua/View/ZJHMyAvatarView~ipad.xib
+++ b/Draw/ZhaJinHua/View/ZJHMyAvatarView~ipad.xib
@@ -41,7 +41,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{222, 114}</string>
 						<reference key="NSSuperview" ref="772205281"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="389415577"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -56,7 +55,6 @@
 						<int key="NSvFlags">-2147483329</int>
 						<string key="NSFrame">{{9, 14}, {94, 94}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="475606837"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="957088809">
@@ -70,7 +68,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{112, 0}, {105, 32}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="983823943"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="957088809"/>
@@ -102,7 +99,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{112, 38}, {100, 22}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="534568071"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="957088809"/>
@@ -118,11 +114,11 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="221333436">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="654635122">
 							<int key="type">1</int>
 							<double key="pointSize">16</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="208723344">
+						<object class="NSFont" key="IBUIFont" id="299655545">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
@@ -134,7 +130,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{108, 74}, {24, 24}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="662170440"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -149,7 +144,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{133, 68}, {84, 36}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="957088809"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -165,8 +159,8 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumScaleFactor">0.89999997615814209</float>
-						<reference key="IBUIFontDescription" ref="221333436"/>
-						<reference key="IBUIFont" ref="208723344"/>
+						<reference key="IBUIFontDescription" ref="654635122"/>
+						<reference key="IBUIFont" ref="299655545"/>
 					</object>
 					<object class="IBUIView" id="89260877">
 						<reference key="NSNextResponder" ref="772205281"/>
@@ -177,7 +171,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{34, 0}, {74, 34}}</string>
 								<reference key="NSSuperview" ref="89260877"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -207,7 +200,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{34, 34}</string>
 								<reference key="NSSuperview" ref="89260877"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="146375440"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -216,7 +208,6 @@
 						</array>
 						<string key="NSFrame">{{57, 40}, {108, 34}}</string>
 						<reference key="NSSuperview" ref="772205281"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1066316025"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="957088809"/>
@@ -225,7 +216,6 @@
 				</array>
 				<string key="NSFrameSize">{222, 114}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="620880868"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="957088809"/>
@@ -411,90 +401,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">54</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">DiceAvatarView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiceAvatarView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FXLabel</string>
-					<string key="superclassName">UILabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FXLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ZJHAvatarView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backgroundImageView">UIImageView</string>
-						<string key="coinImageView">UIImageView</string>
-						<string key="nickNameLabel">UILabel</string>
-						<string key="rewardCoinLabel">UILabel</string>
-						<string key="rewardCoinView">UIView</string>
-						<string key="roundAvatarPlaceView">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backgroundImageView">
-							<string key="name">backgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinImageView">
-							<string key="name">coinImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nickNameLabel">
-							<string key="name">nickNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rewardCoinLabel">
-							<string key="name">rewardCoinLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rewardCoinView">
-							<string key="name">rewardCoinView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="roundAvatarPlaceView">
-							<string key="name">roundAvatarPlaceView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ZJHAvatarView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ZJHMyAvatarView</string>
-					<string key="superclassName">ZJHAvatarView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="coinsLabel">UILabel</string>
-						<string key="levelLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="coinsLabel">
-							<string key="name">coinsLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="levelLabel">
-							<string key="name">levelLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ZJHMyAvatarView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
